feat: rename package

--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,39 @@
 {
-    "name": "laravel-admin-ext/grid-lightbox",
+    "name": "php-panel/ladmin-ext-grid-lightbox",
     "description": "Turn your grid into a lightbox & gallery",
     "type": "library",
-    "keywords": ["laravel-admin", "extension", "grid", "lightbox", "gallery"],
-    "homepage": "https://github.com/laravel-admin-ext/grid-lightbox",
+    "keywords": [
+        "laravel-admin",
+        "extension",
+        "grid",
+        "lightbox",
+        "gallery"
+    ],
+    "homepage": "https://github.com/php-panel/ladmin-ext-grid-lightbox",
     "license": "MIT",
     "authors": [
         {
-            "name": "song",
-            "email": "zosong@126.com"
+            "name": "leeqvip",
+            "email": "leeqvip@gmail.com"
         }
     ],
     "require": {
-        "php": ">=7.0.0",
-        "encore/laravel-admin": "~1.6"
+        "php": ">=8.2",
+        "laravel/framework": ">=12.0",
+        "php-panel/laravel-admin": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~11.0"
     },
     "autoload": {
         "psr-4": {
-            "Encore\\Grid\\Lightbox\\": "src/"
+            "Ladmin\\Grid\\Lightbox\\": "src/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Encore\\Grid\\Lightbox\\LightboxServiceProvider"
+                "Ladmin\\Grid\\Lightbox\\LightboxServiceProvider"
             ]
         }
     }
